# soc-analyzer-pro

./: .gitignore  Dockerfile  HEARTBEAT.txt  README.md  pyproject.toml
.github/workflows/: main.yml  release.yml
soc_analyzer_pro/: Dockerfile
soc_analyzer_pro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
soc_analyzer_pro/src/: alerting.py  main.py  parser.py  utils.py
soc_analyzer_pro/tests/: test_utils.py
