[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soc_analyzer_pro"
version = "3.1.0"
description = "Enterprise-grade SOC Threat Analyzer with Geo-IP Intelligence"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.13.5",
    "python-dotenv==1.0.0",
    "rich==13.7.0",
    "ipinfo>=4.4.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["soc_analyzer_pro*"]